--- a/plugin.xml
+++ b/plugin.xml
@@ -10,10 +10,11 @@
     <license>MIT</license>
     <engines>
         <engine name="cordova-ios" version=">=4.5.5" />
+        <engine name="cordova-android" version=">=9.0.0" />
     </engines>
     <repo>https://github.com/GEDYSIntraWare/cordova-plugin-webview-proxy.git</repo>
     <issue>https://github.com/GEDYSIntraWare/cordova-plugin-webview-proxy/issues</issue>
-    <keywords>cordova,webview,wkwebview,ios</keywords>
+    <keywords>cordova,webview,wkwebview,ios,android</keywords>
 
     <js-module src="www/WebviewProxy.js" name="WebviewProxy">
         <clobbers target="WebviewProxy"/>
@@ -29,4 +30,15 @@
         </config-file>
         <source-file src="src/ios/WebviewProxy.m" />
     </platform>
+
+    <platform name="android">
+        <config-file target="config.xml" parent="/*">
+            <feature name="WebviewProxy">
+                <param name="android-package" value="com.gi.cordova.plugin.webviewproxy.WebviewProxy"/>
+                <param name="onload" value="true" />
+            </feature>
+        </config-file>
+        <source-file src="src/android/WebviewProxy.java" target-dir="src/com/gi/cordova/plugin/webviewproxy"/>
+        <framework src="androidx.webkit:webkit:1.3.0" type="gradleReference" />
+  </platform>
 </plugin>
